--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@capacitor/ios": "^6.1.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.1",
