--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/android": "^6.1.1",
     "@capacitor/core": "^6.1.1",
     "@capacitor/ios": "^6.1.1",
+    "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
