--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "@capacitor/android": "^6.1.1",
     "@capacitor/core": "^6.1.1",
     "@capacitor/ios": "^6.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "chart.js": "^4.4.3",
+    "faker": "^5.5.3",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sass": "^1.77.8"
   },
   "devDependencies": {
