add the files done

--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.1",
     "@capacitor/android": "^6.1.1",
     "@capacitor/core": "^6.1.1",
     "@capacitor/ios": "^6.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "clsx": "^2.1.1",
     "faker": "^5.5.3",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
@@ -24,7 +27,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.1",
