--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@capacitor/android": "^6.1.1",
     "@capacitor/core": "^6.1.1",
     "@capacitor/ios": "^6.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@tanstack/react-table": "^8.19.3",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "faker": "^5.5.3",
     "lucide-react": "^0.416.0",
@@ -26,8 +31,10 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "sass": "^1.77.8",
+    "sweetalert2": "^11.12.3",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
