--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-table": "^8.19.3",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
@@ -33,6 +34,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.1.2",
     "sass": "^1.77.8",
     "sweetalert2": "^11.12.3",
     "tailwind-merge": "^2.4.0"
